# DoubleCtrlOpenApplicationMenu

./: README.md  pyproject.toml
doublectrlopenapplicationmenu/: listener.py  run.py
