[tool.poetry]
name = "doublectrlopenapplicationmenu"
version = "0.1.0"
description = "Use double Ctrl to open application menu in ElementaryOS"
authors = ["Powersnail <hj5fb@virginia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
keyboard = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.701.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry.scripts]
double-ctrl-daemon = "doublectrlopenapplicationmenu.run:main"
double-ctrl-listener = "doublectrlopenapplicationmenu.listener:main"
